emptydir-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rng-deployment
  namespace: projecta-dev
  labels:
    app: rng
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: rng
  template:
    metadata:
      labels:
        app: myapp
        tier: rng
        environment: dev
    spec:
      volumes:
      - name: cache-volume
        emptyDir: {}
      containers:
      - name: rng
        image:  duizhang/rng:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /cache
          name: cache-volume
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /cache
          name: cache-volume
