hostpath-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: rng-deployment
  namespace: projecta-dev
  labels:
    app: rng
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: rng
  template:
    metadata:
      labels:
        app: myapp
        tier: rng
        environment: dev
    spec:
      volumes:
      - name: data-volume
        hostPath:
          path: "/mydata2"
      containers:
      - name: rng
        image:  duizhang/rng:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /data
          name: data-volume
