secret-item-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: rng-deployment
  namespace: projecta-dev
  labels:
    app: rng
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: rng
  template:
    metadata:
      labels:
        app: myapp
        tier: rng
        environment: dev
    spec:
      containers:
      - name: rng
        image:  duizhang/rng:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /mysql
          name: mysql
      volumes:
      - name: mysql
        secret:
         secretName: mysecret
         items:
         - key: username
           path: my-group/my-username
