service.yml
apiVersion: v1
kind: Service
metadata:
  name: rng
  labels:
    run: rng
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 32050
  selector:
    tier: rng
